Update PortalController.java